@@ -1,8 +1,8 @@
 [browser]
 width = 690
 height = 476
-x_pos = 10
-y_pos = 68
+x_pos = 5
+y_pos = 46
 tag_pane = True
 closed_task_pane = True
 ctask_pane_height = 253
