@@ -1,4 +1,5 @@
-    * Bug #339268 : typo in the title bar
+	- Bug #339583 : patch enter key to confirm a delete (thanks Gérôme Fournier)
+	- Typos : Bug #339268
 
 2009-06-01 Getting Things Gnome ! 0.1
 	* Bumping version number. First release of GTG
